<resources>
    <string name="app_name">Run</string>

    //暂时
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_login">Sign in</string>

    <string name="login_success">login success</string>
    <string name="login">LOGIN</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">login</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>

    <string name="action_settings">setting</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_launch">LaunchActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main_bottom_navi">MainActivityBottomNavi</string>
    <string name="title_home">Home</string>
    <string name="title_set">Setting</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="start">开始</string>
    <string name="pause">暂停</string>
    <string name="stop">结束</string>
    <string name="params">参数</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="done">完成</string>
    <string name="info">\u3000\u3000设置用户的身高、体重2个参数信息。通过设置身高可以大致计算出不同身高的人的步长，从而计算出用户所行走的步数；通过设置体重可以估算出不同体重的人运动所消耗的卡路里。</string>

    <string name="action_about">About</string>
    <string name="dialog_message">Created by Yasin Yildirim - 2014</string>
    <string name="dialog_ok">OK</string>
    <string name="list_item_left_button">Left</string>
    <string name="list_item_right_button">Right</string>
</resources>
