<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
    android:background="@drawable/run">
    <LinearLayout
        android:id="@+id/ll_warn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:background="#80808033">
        <TextView
            android:id="@+id/tv_warn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="点击设置人体参数"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/tv_info"
            android:padding="15dp"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text=""/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_operator"
          android:layout_width="match_parent"
          android:layout_height="60dp"
          android:orientation="horizontal"
            android:paddingBottom="20dp">
        <Button
            android:id="@+id/bt_start"
            android:layout_width="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:background="@drawable/bt_shape"
            android:stateListAnimator="@drawable/state_list_animator_z"
            android:text="@string/start"
            android:textColor="#d3d3d3"/>

        <Button
            android:id="@+id/bt_pause"
            android:layout_width="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:background="@drawable/bt_shape"
            android:stateListAnimator="@drawable/state_list_animator_z"
            android:text="@string/pause"
            android:textColor="#d3d3d3"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/bt_stop"
            android:layout_width="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:background="@drawable/bt_shape"
            android:stateListAnimator="@drawable/state_list_animator_z"
            android:text="@string/stop"
            android:textColor="#d3d3d3"
            android:visibility="gone"/>




    </LinearLayout>
</LinearLayout>
