<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/params"
                tools:context=".activities.PersonInfoActivity">
    <!--<android.support.v7.widget.CardView-->
        <!--android:id="@+id/cv_add"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="320dp"-->
        <!--android:layout_centerInParent="true"-->
        <!--android:layout_margin="20dp"-->
        <!--app:cardBackgroundColor="#2ea67f"-->
        <!--app:cardCornerRadius="6dp"-->
        <!--app:cardElevation="3dp"-->
        <!--app:cardUseCompatPadding="true">-->

    <android.support.v7.widget.CardView
        android:id="@+id/cv_pi"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp">

                <!--<View-->
                    <!--android:layout_width="8dp"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:layout_alignParentStart="true"-->
                    <!--android:background="#2fa881"/>-->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="50dp"
                    android:text="@string/params"
                    android:textColor="#FFCC00"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingEnd="30dp"
                android:paddingStart="50dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#c5c5c5">

                    <EditText
                        android:id="@+id/et_height"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_bg_edit"
                        android:hint="@string/height"
                        android:inputType="number"
                        android:paddingBottom="2dp"
                        android:textColor="#2fa881"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:textSize="15sp"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:paddingEnd="30dp"
                android:paddingStart="50dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#c5c5c5">

                    <EditText
                        android:id="@+id/et_weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_bg_edit"
                        android:hint="@string/weight"
                        android:inputType="number"
                        android:paddingBottom="2dp"
                        android:textColor="#2fa881"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:textSize="15sp"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:paddingEnd="30dp"
                android:paddingStart="50dp">

                <Button
                    android:id="@+id/btn_done"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/bt_shape"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:text="@string/done"
                    android:textColor="#d3d3d3"/>


                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/btn_done"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#c5c5c5">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/info"
                        android:textColor="@color/white"
                        android:textSize="10sp"/>
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>




        </LinearLayout>
    </android.support.v7.widget.CardView>



</RelativeLayout>
